# grash

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml  test-python-publish.yml
grash/: console.py  graph.py  parser.py
tests/: test_graph.py  test_parser.py
