[tool.poetry]
name = "grash"
version = "0.1.0"
description = ""
authors = ["Colin McAllister <colinmca242@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
bashlex = "^0.15"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
